--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -43,11 +43,51 @@
                     </ul>
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
-                  <button id="reset-btn" type="button" class="btn btn-default">Reset</button>
+                  <button type="button" class="btn btn-default reset-btn">Reset</button>
                 </form>
               </div>
             </div>
           </aside>
+          
+          <aside class="filters">
+            <div class="panel panel-default">
+              <div class="panel-heading">Filter Search</div>
+              <div class="panel-body">
+                <form id="form-city">
+                  <div class="form-group">
+                    <ul class="list-group" id="filters">
+                      <li class="filter list-group-item">
+                        <label for="date">Enter a City</label>
+                        <input class="form-control" id="city" type="text" placeholder="fresno">
+                      </li>
+                    </ul>
+                  </div>
+                  <button id="city-filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                  <button type="button" class="btn btn-default reset-btn">Reset</button>
+                </form>
+              </div>
+            </div>
+          </aside>
+          <aside class="filters">
+            <div class="panel panel-default">
+              <div class="panel-heading">Filter Search</div>
+              <div class="panel-body">
+                <form id="form-state">
+                  <div class="form-group">
+                    <ul class="list-group" id="filters">
+                      <li class="filter list-group-item">
+                        <label for="date">Enter a State</label>
+                        <input class="form-control" id="state" type="text" placeholder="ca">
+                      </li>
+                    </ul>
+                  </div>
+                  <button id="state-filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                  <button type="button" class="btn btn-default reset-btn">Reset</button>
+                </form>
+              </div>
+            </div>
+          </aside>
+
         </div>
         <div class="col-md-10">
           <div id="table-area" class="">
