--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -55,7 +55,7 @@
                     </ul>
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
-                  <button type="button" class="btn btn-default reset-btn">Reset</button>
+                  <button id="reset-btn" type="button" class="btn btn-default">Reset</button>
                 </form>
               </div>
             </div>
